using slect box options

--- a/index.html
+++ b/index.html
@@ -11,30 +11,18 @@
        {
            str1 = document.getElementById("user").value;
            str2 = document.getElementById("pass").value;
-           str3 = document.getElementById("check1").value;
-           str4 = document.getElementById("check2").value;
-           if(check1.checked == false && check2.checked == false)
-           {
-               alert("tick one please")
-           }
-           else
-           {
-                if(str1==str2 && check1.checked== true)
-                {
-                    alert("Hello " + str1 + " you can enter now in your " + str3 + " account");
-                }
-                else
-                {
-                    if(str1==str2 && check2.checked== true)
+           str3 = document.getElementById("selection");
+           str4 = str3.options[str3.selectedIndex].value;
+           
+       
+                    if(str1==str2)
                     {
                         alert("Hello " + str1 + " you can enter now in your " + str4 + " account");   
                     }
                     else
                     {
-                        alert("username / id do not match")
+                        alert("username / id do not match");
                     }
-                }
-           }
        }
    
    </script>
@@ -42,8 +30,10 @@
 <body>
     <input id="user" placeholder="username">
     <input id="pass" type="password" placeholder="password">
-  <input type="radio" id="check1" name="social" value="Facebook">Facebook</input>
-  <input type="radio" id="check2" name="social" value="twitter">Twitter</input>
+<select id="selection">
+    <option>Facebook</option><br>
+    <option>Twitter</option>
+</select>
     <button onclick="buttonclick()">click</button>
 
 
